--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+    background: #005bb0;
+    background: -webkit-linear-gradient(to right, #006db0, #3dc4c9);
+    background: linear-gradient(to right, #006db0, #3d98c9);
+    min-height: 100vh;
+    padding-top: 20px;
+  }
+  
+  .text-gray {
+    color: #aaa;
+  }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  .badge-margin-left-240{
+    margin-left: 240px;
+  }
